[package]
name = "pdf-inspect"
version = "0.1.0"
authors = ["Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2024"


[dependencies]
pdf = {git = "https://github.com/pdf-rs/pdf"}
# pdf = {path = "../pdf" }

imgui = "0.12.0"
#glium = "0.36.0"
copypasta = "0.10.2"
imgui-winit-support = "0.13.0"
imgui-glium-renderer = "0.13.0"
glium = "0.35.0"
stderrlog = "0.6.0"
log = "0.4.27"


